2004-03-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scripts/lilypond-book.py (Lilypond_snippet.is_outdated): require
	PNG for texinfo too.

	* po/lilypond.pot: update translation strings.

	* VERSION: 2.1.35 released
	
	* scripts/convert-ly.py (FatalConversionError.sub_abs): convert
	context argument too.

	* make/ly-rules.make ($(outdir)/%.texi): use variable for outdir.

	* input/mutopia/W.A.Mozart/mozart-hrn-3.ly: Mozart died in 1791

	* python/lilylib.py (command_name): don't return 1st path
	component.

	* scripts/lilypond-book.py (Lilypond_snippet.is_outdated): treat
	.png case separately.

	* python/lilylib.py (system): typo.
	
2004-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/span-bar.ly: Fix typos.  Set indent-level:2,
	run indent-region.

	* Documentation/user/preface.itely: Run texinfo-all-menus-update.
	Fixes compile.

	* lily/function-documentation.cc: Compile fix: Include <string.h>.
	Add header.

2004-03-27  Heikki Junes  <hjunes@cc.hut.fi>

	* vim/lilypond-indent.vim: small fixes.

2004-03-26  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/notation.itely (Entering lyrics): Add example
	with correct english double quotes (at least for LaTeX output,
	maybe not a good idea if we switch to PS as the default output
	format).

2004-03-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/staff-performer.cc (create_audio_elements): play instrument
	changes before notes arrive. This fixes instrument of the first
	note in a score.

	* scripts/convert-ly.py (FatalConversionError.conv): add #'() case
	to 1.9.0 conversion.

	* lily/mark-engraver.cc: doc string.

	* make/lilypond.redhat.spec.in (Group): add vim scriptlets.

	* Documentation/user/introduction.itely (Introduction): new node.

2004-03-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/duration.cc (LY_DEFINE): dotcount argument is now optional.

	* input/regression/spacing-ragged-last.ly: new file.

	* lily/gourlay-breaking.cc (do_solve): add raggedlast support for