@@ -3,7 +3,12 @@
 
 \header { texidoc = "@cindex Script Priority
 Relative placements of different script types can be controlled
-by overriding @code{script-priority}. "
+by overriding @code{script-priority}.
+
+In this example, accidentals are put either below or above other
+script symbols.
+
+"
 }
 
 
@@ -11,13 +16,13 @@ by overriding @code{script-priority}. "
     \context Staff \notes \relative g''{
 	
  	\override Score.TextScript  #'script-priority = #-100
-	a4^\prall^\markup \fontsize #-2 \semisharp
+	a4^\prall^\markup { \sharp }
 
 	
  	\override Score.Script  #'script-priority = #-100
  	\revert Score.TextScript #'script-priority
 	
-	a4^\prall^\markup \fontsize  #-2 \semisharp
+	a4^\prall^\markup { \sharp }
     }
 	\paper { raggedright = ##t} 
 }
