@@ -20,7 +20,7 @@ what you would expect.)
 
 
 \score  {
- \notes \relative c'' <<
+    \notes \relative c'' <<
  	\new StaffContainer {
 
 	    %% need << >>, otherwise we descend to the voice inside SA  
@@ -34,33 +34,33 @@ what you would expect.)
 	    << \context Staff { e d f \bar ":|" } >>
 	    \skip 4
 	}
- >>
+    >>
 
-\paper {
+    \paper {
 	\context {
-		\ScoreContext
-		\accepts StaffContainer
-		\denies Staff
+	    \ScoreContext
+	    \accepts StaffContainer
+	    \denies Staff
 	}
 	\context {
-		\type Engraver_group_engraver
-		\consists Clef_engraver
-		\consists Time_signature_engraver
-		\consists Separating_line_group_engraver
-		\consistsend "Axis_group_engraver"
-		\accepts "Staff"
-		
-		\name StaffContainer
+	    \type Engraver_group_engraver
+	    \consists Clef_engraver
+	    \consists Time_signature_engraver
+	    \consists Separating_line_group_engraver
+	    \consistsend "Axis_group_engraver"
+	    \accepts "Staff"
+	    
+	    \name StaffContainer
 	}
 	\context {
-		\StaffContext
-		\remove Axis_group_engraver
-		\remove Separating_line_group_engraver
-		\remove Clef_engraver
-		\remove Time_signature_engraver
+	    \StaffContext
+	    \remove Axis_group_engraver
+	    \remove Separating_line_group_engraver
+	    \remove Clef_engraver
+	    \remove Time_signature_engraver
 	}
 	raggedright=##t
-}
+    }
 }
 
 
