@@ -1,5 +1,14 @@
 2004-03-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* Documentation/user/changing-defaults.itely (Determining the grob
+	property): fix references.
+
+	* lily/staff-symbol.cc (print): only add extent if non empty.
+	This fixes staff-container.ly.
+
+	* lily/timing-engraver.cc (initialize): init whichBar, so a score
+	starting with a mmrest also works.
+
 	* scripts/lilypond-book.py (Lilypond_snippet.is_outdated): require
 	PNG for texinfo too.
 
